...
                    android:layout_height="wrap_content"
                    android:text="@string/reemind_title"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/NotificationTitle" />

                <EditText
                    android:id="@+id/drug_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:textColor="@color/NotificationTitle"
                    android:textColorHighlight="@color/accentLight"
                    android:textSize="28sp"/>
...
                        android:layout_marginLeft="@dimen/image_margin_side"
                        android:layout_marginStart="@dimen/image_margin_side"
                        android:tint="@color/iconTint"
                        app:srcCompat="@drawable/ic_short_description"/>

                    <EditText
                        android:id="@+id/drug_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/text_margin_side"
                        android:layout_marginStart="@dimen/text_margin_side"
                        android:background="@android:color/transparent"
...
                        android:textColorHint="@color/textLightGray"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/icon_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="@dimen/table_row_default_horizontal_padding"
                    android:paddingEnd="@dimen/table_row_default_padding_side"
                    android:paddingRight="@dimen/table_row_default_padding_side"
...
                        android:layout_marginLeft="@dimen/image_margin_side"
                        android:layout_marginStart="@dimen/image_margin_side"
                        android:tint="@color/iconTint"
                        app:srcCompat="@drawable/ic_start_date" />

                    <TextView
                        android:id="@+id/start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/text_margin_side"
                        android:layout_marginStart="@dimen/text_margin_side"
                        android:text="@string/date_today"
...
                        android:layout_marginLeft="@dimen/image_margin_side"
                        android:layout_marginStart="@dimen/image_margin_side"
                        app:srcCompat="@drawable/ic_start_time"
                        android:tint="@color/iconTint" />

                    <TextView
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/text_margin_side"
                        android:layout_marginStart="@dimen/text_margin_side"
                        android:text="@string/time_now"
...
                        android:layout_marginLeft="@dimen/image_margin_side"
                        android:layout_marginStart="@dimen/image_margin_side"
                        android:tint="@color/iconTint"
                        app:srcCompat="@drawable/ic_repeat_frequency"/>

                    <EditText
                        android:id="@+id/frequency_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="22dp"
                        android:layout_marginStart="22dp"
                        android:hint="frequency e.g 3 times"
...
