...
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/month_button"
            android:background="@color/cardview_light_background"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select month"
            android:elevation="24dp"/>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

...
